test/sema/const-array-pointer-implicit-wrap-to-non-const.delta
// RUN: %not %delta -print-llvm %s | %FileCheck %s

int[*]? o = null;

extern const int* f();

void main() {
    // TODO: Make this test work with explicitly typed local variable of type 'const int[*]', in addition to the cast result.
    var p = cast<const int[*]>(f());

    // CHECK: [[@LINE+1]]:7: error: cannot assign 'const int[*]' to 'int[*]?'
    o = p;
}
